# bayes

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  PROJECT_PLAN.md  README.md  SETUP_GUIDE.md  bayes_mcp.py  bayesian_mcp.py  debug_server.py  pyproject.toml  test_demo.py
bayes_mcp/bayesian_engine/: distributions.py  engine.py
bayes_mcp/mcp/: server.py
bayesian_mcp/bayesian_engine/: __init__.py
bayesian_mcp/mcp/: server.py
bayesian_mcp/schemas/: __init__.py
demos/: ab_testing_demo.py  financial_risk_demo.py  master_demo.py  medical_diagnosis_demo.py  run_all_demos.py
examples/: ab_test.py  linear_regression.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_server_integration.py
tests/unit/: __init__.py  test_bayesian_engine.py  test_mcp_handlers.py  test_schemas.py  test_utils.py
