[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-mcp"
version = "0.1.0"
description = "Bayesian reasoning MCP server for LLMs"
readme = "README.md"
authors = [
    {name = "Wrench AI Contributors"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pymc>=5.0.0",
    "arviz>=0.14.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "mcp>=1.6.0",
    "fastapi>=0.100.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "uvicorn>=0.20.0",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.19.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bayes_mcp*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
"Homepage" = "https://github.com/wrenchchatrepo/bayes-mcp"
"Bug Tracker" = "https://github.com/wrenchchatrepo/bayes-mcp/issues"